# 2019TRoMaC-CV-HeroAutoAim

./: CMakeLists.txt  README.md  hero.kdev4  pic
camera/: camera.cpp  camera.h  intrinsics.yml
decision/: Decision.cpp  Decision.h
detector/: ArmorDetector.cpp  ArmorDetector.h
fusion/: CoordinatesFusion.cpp  CoordinatesFusion.h
main/: ThreadControl.cpp  ThreadControl.h  main.cpp
predictor/: KalmanFilter.cpp  KalmanFilter.h  Predictor.cpp  Predictor.h
tools/: MathTools.cpp  MathTools.h
uart/: serial.cpp  serial.hpp
